# wake

./: .gitignore  LICENSE  README.md  computers.yaml  pyproject.toml  requirements.txt  requirements.txt‎  wake.asgi  wake.py  wake.wsgi
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
static/: script.js  site.webmanifest  style.css
templates/: index.html
tests/: test_runtime_headers.py
wol/: computers.yaml  wake.py  wake.wsgi
wol/static/: style.css
wol/templates/: index.html  mac.html
