[project]
name = "wake"
version = "1.0.0"
description = "A Flask web app to turn on your computer using wake on lan"
authors = [
    {name = "Jay Townsend"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "Flask==3.1.2",
    "wakeonlan==3.1.0",
    "PyYaml==6.0.2",
    "Werkzeug==3.1.3",
]

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "types-PyYAML==6.0.12.20250822",
    "ruff==0.14.6",
]
[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
show_traceback = true
show_error_codes = true
namespace_packages = true

[tool.uv]
python-preference = "managed"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "tests",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".github",
    ".venv",
    ".vscode",
    ".idea",
    "__pypackages__",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 130
target-version = "py312"
show-fixes = true

[tool.ruff.lint]
select = ["E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "TCH",
    "RUF",
    "PT",
    ]
ignore = ["E721", "F403", "F405", "UP030"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

skip-magic-trailing-comma = false
line-ending = "auto"
